--- a/src/ui/utilities/userFeed.scss
+++ b/src/ui/utilities/userFeed.scss
@@ -12,8 +12,8 @@
   border-radius: 25px;
   border: none;
 
-  min-height: 10vh;
-
+  min-height: 70vh;
+  
   margin: 0 2vw 2vw 2vw;
 }
 
@@ -32,7 +32,8 @@
   list-style: none;
 
   width: 100%;
-  height: 10vh;
+  height: fit-content;
+  max-height: 15vh;
 
   border: 1px solid grey;
   border-radius: 5px;
@@ -59,28 +60,33 @@
   padding: 1vh 1vw;
 
   color: $font-color;
+
+  width: 100%;
 }
 
 .itemImage {
   width: 10%;
-  height: auto;
+  // height: auto;
 
   object-fit: contain;
 
   border-radius: 5px;
+
+  background-color: grey;
 }
 
 .itemBlock_info {
   display: flex;
   flex-direction: column;
 
-  width: 80%;
+  width: 100%;
 
   margin-left: 1vw;
 }
 
 .itemName {
   display: flex;
+  flex-grow: 1;
   font-size: large;
   font-weight: 600;
 
@@ -97,11 +103,14 @@
   justify-content: space-between;
   align-items: flex-end;
   flex-grow: 1;
+
+  width: 100%;
 }
 
 .itemInfo_left {
   display: flex;
   flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 .itemInfo_right {
@@ -118,5 +127,5 @@
   height: 20px;
   width: 20px;
 
-  margin: 2px 0 0 0;
+  margin: 0 0 2px 0;
 }
